--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2792,6 +2792,9 @@ proc cmdModuleStash {} {
    cmdModuleReset
 }
 
+proc cmdModuleStashpop {{stash 0}} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
