init: add stashpop subcmd to completion scripts

--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -158,6 +158,7 @@ _module() {
             'mod-to-sh:Make shell code from modulefile env changes'
             'reset:Restore initial environment'
             'stash:Save current environment and reset'
+            'stashpop:Restore then remove stash collection'
          )
          # show commands only with compatible options
          if (( !$+opt_args[-h] && !$+opt_args[--help] \
