--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2816,6 +2816,9 @@ proc cmdModuleStashpop {{stash 0}} {
    cmdModuleSaverm $coll
 }
 
+proc cmdModuleStashrm {{stash 0}} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
