init: add stashrm subcmd to completion scripts

--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -85,6 +85,7 @@ complete module 'n/help/`_module_avail`/' \
         "n/reset/n/" \
         "n/stash/n/" \
         "n/stashpop/n/" \
+        "n/stashrm/n/" \
         "n/--reset/(@comp_config_opts@)/" \
         'n/-h/n/' \
         'n/--help/n/' \
