--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -159,6 +159,7 @@ _module() {
             'reset:Restore initial environment'
             'stash:Save current environment and reset'
             'stashpop:Restore then remove stash collection'
+            'stashrm:Remove stash collection'
          )
          # show commands only with compatible options
          if (( !$+opt_args[-h] && !$+opt_args[--help] \
