--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -400,6 +400,25 @@ proc getDiffBetweenCurEnvAndColl {collfile colldesc} {
       $path_to_use $is_tags_diff]
 }
 
+proc getCollectionFromStash {stash} {
+   if {[string match stash-* $stash]} {
+      set coll $stash
+   } elseif {[string is integer -strict $stash]} {
+      # filter collection from other target (especially if no target set)
+      set collfile [lindex [lsort -decreasing [findCollections stash-* glob\
+         0 0 1 1]] $stash]
+      if {$collfile eq {}} {
+         knerror "Invalid stash index '$stash'"
+      }
+      # extract collection name (without path and target extension)
+      set coll [file rootname [file tail $collfile]]
+   } else {
+      knerror "Invalid stash collection name '$stash'"
+   }
+
+   return $coll
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
