Core code for cmdModuleStashrm
Implement 'stashrm' sub-command. Parse stash argument to get
corresponding collection, then call saverm over this collection name.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2804,6 +2804,11 @@ proc cmdModuleStashpop {{stash 0}} {
 }
 
 proc cmdModuleStashrm {{stash 0}} {
+   # determine stash collection name from argument
+   set coll [getCollectionFromStash $stash]
+
+   # delete stash collection file
+   cmdModuleSaverm $coll
 }
 
 # ;;; Local Variables: ***
