Add 'stashshow' sub-command
Introduce stashshow sub-command to display stash collection file.

This sub-command cannot be called from a modulefile evaluation context.

Add sub-command empty skeleton: cmdModuleStashshow.

Sub-command accepts no option. It may take an optional argument: the
index of the stash collection to display or the name of the stash
collection. If no argument is provided, stash collection 0 is assumed.

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1778,7 +1778,7 @@ See 'module --help' to get available commands and options.}
 
 proc reportUsage {} {
    reportVersion
-   ##nagelfar ignore #103 Too long line
+   ##nagelfar ignore #104 Too long line
    report {Usage: module [options] [command] [args ...]
 
 Loading / Unloading commands:
@@ -1816,6 +1816,7 @@ Collection of modules handling commands:
   stash                             Save current environment and reset
   stashpop        [stash]           Restore then remove stash collection
   stashrm         [stash]           Remove stash collection
+  stashshow       [stash]           Display information about stash collection
 
 Environment direct handling commands:
   prepend-path [-d c] var val [...] Prepend value to environment variable
