--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2811,6 +2811,9 @@ proc cmdModuleStashrm {{stash 0}} {
    cmdModuleSaverm $coll
 }
 
+proc cmdModuleStashshow {{stash 0}} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
