--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -108,7 +108,7 @@ proc parseModuleCommandName {command defaultcmd} {
       initlist initclear autoinit clear config help test prepend-path\
       append-path remove-path is-loaded is-saved is-used is-avail info-loaded\
       sh-to-mod edit try-load refresh state load-any lint mod-to-sh reset\
-      stash stashpop stashrm]}]
+      stash stashpop stashrm stashshow]}]
 
    reportDebug "(command=$command, cmdvalid=$cmdvalid, cmdempty=$cmdempty)"
    return [list $command $cmdvalid $cmdempty]
@@ -373,7 +373,7 @@ proc module {command args} {
          path - paths - autoinit - help - prepend-path - append-path -\
          remove-path - is-loaded - is-saved - is-used - is-avail -\
          info-loaded - clear - sh-to-mod - edit - refresh - source - state -\
-         lint - mod-to-sh - reset - stash - stashpop - stashrm {
+         lint - mod-to-sh - reset - stash - stashpop - stashrm - stashshow {
             knerror "${msgprefix}Command '$command' not supported$tryhelpmsg"
          }
       }
@@ -414,7 +414,7 @@ proc module {command args} {
          }
       }
       search - save - restore - saverm - saveshow - clear - state - stashpop\
-         - stashrm {
+         - stashrm - stashshow {
          if {[llength $args] > 1} {
             set argnberr 1
          }
@@ -728,6 +728,9 @@ proc module {command args} {
       }
       stashrm {
          cmdModuleStashrm {*}$args
+      }
+      stashshow {
+         cmdModuleStashshow {*}$args
       }
       help {
          cmdModuleHelp {*}$args
