init: add stashshow subcmd to completion scripts

--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -86,6 +86,7 @@ complete module 'n/help/`_module_avail`/' \
         "n/stash/n/" \
         "n/stashpop/n/" \
         "n/stashrm/n/" \
+        "n/stashshow/n/" \
         "n/--reset/(@comp_config_opts@)/" \
         'n/-h/n/' \
         'n/--help/n/' \
