--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -160,6 +160,7 @@ _module() {
             'stash:Save current environment and reset'
             'stashpop:Restore then remove stash collection'
             'stashrm:Remove stash collection'
+            'stashshow:Display information about stash collection'
          )
          # show commands only with compatible options
          if (( !$+opt_args[-h] && !$+opt_args[--help] \
