--- a/init/bash_completion.in
+++ b/init/bash_completion.in
@@ -88,7 +88,7 @@ _module() {
     apropos|keyword|search)
                     COMPREPLY=( $(compgen -W "@comp_search_opts@" -- "$cur") );;
     config|--reset) COMPREPLY=( $(compgen -W "@comp_config_opts@" -- "$cur") );;
-    -h|--help|-V|--version|purge|refresh|reload|sh-to-mod|source|state|reset|stash|stashpop|stashrm)
+    -h|--help|-V|--version|purge|refresh|reload|sh-to-mod|source|state|reset|stash|stashpop|stashrm|stashshow)
                     ;;
     append-path|prepend-path)
                     COMPREPLY=( $(compgen -W "@comp_path_opts@" -- "$cur") );;
@@ -147,7 +147,7 @@ if $(type -t ml >/dev/null); then
         apropos|keyword|search)
                         COMPREPLY=( $(compgen -W "@comp_search_opts@" -- "$cur") );;
         config|--reset) COMPREPLY=( $(compgen -W "@comp_config_opts@" -- "$cur") );;
-        -h|--help|-V|--version|purge|refresh|reload|sh-to-mod|source|state|reset|stash|stashpop|stashrm)
+        -h|--help|-V|--version|purge|refresh|reload|sh-to-mod|source|state|reset|stash|stashpop|stashrm|stashshow)
                         ;;
         append-path|prepend-path)
                         COMPREPLY=( $(compgen -W "@comp_path_opts@" -- "$cur") );;
