--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2812,6 +2812,11 @@ proc cmdModuleStashrm {{stash 0}} {
 }
 
 proc cmdModuleStashshow {{stash 0}} {
+   # determine stash collection name from argument
+   set coll [getCollectionFromStash $stash]
+
+   # display stash collection file
+   cmdModuleSaveshow $coll
 }
 
 # ;;; Local Variables: ***
