Add 'stashclear' sub-command
Introduce stashclear sub-command to delete all stash collection file.

This sub-command cannot be called from a modulefile evaluation context.

Add sub-command empty skeleton: cmdModuleStashclear.

Sub-command accepts no argument nor option.

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1778,7 +1778,7 @@ See 'module --help' to get available commands and options.}
 
 proc reportUsage {} {
    reportVersion
-   ##nagelfar ignore #104 Too long line
+   ##nagelfar ignore #105 Too long line
    report {Usage: module [options] [command] [args ...]
 
 Loading / Unloading commands:
@@ -1817,6 +1817,7 @@ Collection of modules handling commands:
   stashpop        [stash]           Restore then remove stash collection
   stashrm         [stash]           Remove stash collection
   stashshow       [stash]           Display information about stash collection
+  stashclear                        Remove all stash collections
 
 Environment direct handling commands:
   prepend-path [-d c] var val [...] Prepend value to environment variable
