--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2819,6 +2819,9 @@ proc cmdModuleStashshow {{stash 0}} {
    cmdModuleSaveshow $coll
 }
 
+proc cmdModuleStashclear {} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
