--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -108,7 +108,7 @@ proc parseModuleCommandName {command defaultcmd} {
       initlist initclear autoinit clear config help test prepend-path\
       append-path remove-path is-loaded is-saved is-used is-avail info-loaded\
       sh-to-mod edit try-load refresh state load-any lint mod-to-sh reset\
-      stash stashpop stashrm stashshow]}]
+      stash stashpop stashrm stashshow stashclear]}]
 
    reportDebug "(command=$command, cmdvalid=$cmdvalid, cmdempty=$cmdempty)"
    return [list $command $cmdvalid $cmdempty]
@@ -373,7 +373,8 @@ proc module {command args} {
          path - paths - autoinit - help - prepend-path - append-path -\
          remove-path - is-loaded - is-saved - is-used - is-avail -\
          info-loaded - clear - sh-to-mod - edit - refresh - source - state -\
-         lint - mod-to-sh - reset - stash - stashpop - stashrm - stashshow {
+         lint - mod-to-sh - reset - stash - stashpop - stashrm - stashshow -\
+         stashclear {
             knerror "${msgprefix}Command '$command' not supported$tryhelpmsg"
          }
       }
@@ -398,7 +399,7 @@ proc module {command args} {
          }
       }
       refresh - reload - aliases - purge - initlist - initclear - autoinit -\
-         reset - stash {
+         reset - stash - stashclear {
          if {[llength $args] != 0} {
             set argnberr 1
          }
@@ -731,6 +732,9 @@ proc module {command args} {
       }
       stashshow {
          cmdModuleStashshow {*}$args
+      }
+      stashclear {
+         cmdModuleStashclear
       }
       help {
          cmdModuleHelp {*}$args
