init: add stashclear subcmd to completion scripts

--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -84,6 +84,7 @@ complete module 'n/help/`_module_avail`/' \
         'n/mod-to-sh/`_module_not_yet_loaded; echo "@comp_modtosh_opts@"`/' \
         "n/reset/n/" \
         "n/stash/n/" \
+        "n/stashclear/n/" \
         "n/stashpop/n/" \
         "n/stashrm/n/" \
         "n/stashshow/n/" \
