--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -158,6 +158,7 @@ _module() {
             'mod-to-sh:Make shell code from modulefile env changes'
             'reset:Restore initial environment'
             'stash:Save current environment and reset'
+            'stashclear:Remove all stash collections'
             'stashpop:Restore then remove stash collection'
             'stashrm:Remove stash collection'
             'stashshow:Display information about stash collection'
