Core code for cmdModuleStashclear
Implement 'stashclear' sub-command. Fetch all existing stash collection
for current collection target. Then call 'saverm' sub-command over all
of these collection obtained.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2820,6 +2820,17 @@ proc cmdModuleStashshow {{stash 0}} {
 }
 
 proc cmdModuleStashclear {} {
+   # get all stash collections (only from current target)
+   set collfile_list [findCollections stash-* glob 0 0 1 1]
+
+   # delete all stash collections starting from most recent
+   foreach collfile [lsort -decreasing $collfile_list] {
+      # extract collection name (without path and target extension)
+      set coll [file rootname [file tail $collfile]]
+
+      # delete stash collection file
+      cmdModuleSaverm $coll
+   }
 }
 
 # ;;; Local Variables: ***
