--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1778,7 +1778,7 @@ See 'module --help' to get available commands and options.}
 
 proc reportUsage {} {
    reportVersion
-   ##nagelfar ignore #105 Too long line
+   ##nagelfar ignore #106 Too long line
    report {Usage: module [options] [command] [args ...]
 
 Loading / Unloading commands:
@@ -1818,6 +1818,7 @@ Collection of modules handling commands:
   stashrm         [stash]           Remove stash collection
   stashshow       [stash]           Display information about stash collection
   stashclear                        Remove all stash collections
+  stashlist                         List all stash collections
 
 Environment direct handling commands:
   prepend-path [-d c] var val [...] Prepend value to environment variable
