--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2833,6 +2833,9 @@ proc cmdModuleStashclear {} {
    }
 }
 
+proc cmdModuleStashlist {show_oneperline show_mtime} {
+}
+
 # ;;; Local Variables: ***
 # ;;; mode:tcl ***
 # ;;; End: ***
