init: add stashlist subcmd to completion scripts

--- a/init/Makefile
+++ b/init/Makefile
@@ -115,11 +115,12 @@ quarvarsre += s/@.*RUNENV_VAR.*@//;'
 endif
 
 # define variables for shell completion
-comp_cmds := add add-any apropos aliases avail append-path clear config del display edit help initadd initclear initlist initprepend initrm is-loaded is-saved is-used is-avail info-loaded keyword lint list load load-any mod-to-sh path paths purge prepend-path refresh reload reset restore rm remove remove-path save savelist saveshow saverm search show sh-to-mod source stash stashclear stashpop stashrm stashshow state swap switch test try-add try-load unload unuse use whatis
+comp_cmds := add add-any apropos aliases avail append-path clear config del display edit help initadd initclear initlist initprepend initrm is-loaded is-saved is-used is-avail info-loaded keyword lint list load load-any mod-to-sh path paths purge prepend-path refresh reload reset restore rm remove remove-path save savelist saveshow saverm search show sh-to-mod source stash stashclear stashlist stashpop stashrm stashshow state swap switch test try-add try-load unload unuse use whatis
 comp_opts := -D -h -s -T -v -V -w --debug --help --silent --trace --verbose --version --paginate --no-pager --color --color= --width --width=
 comp_load_opts := --auto --no-auto --force -f --icase -i --tag --tag=
 comp_unload_opts := --auto --no-auto --force -f --icase -i
 comp_list_opts := -a -j -l -o -t --all --json --long --output --output= --terse
+comp_stashlist_opts := -j -l -t --json --long --terse
 comp_clear_opts := --force -f
 comp_avail_opts := -a -C -d -i -j -L -l -o -S -t --all --contains --default --icase --json --latest --long --output --output= --starts-with --terse --indepth --no-indepth
 comp_mfile_opts := -i --icase
@@ -148,6 +149,7 @@ sed -e 's|@prefix@|$(prefix)|g' \
 	-e 's|@comp_load_opts@|$(comp_load_opts)|g' \
 	-e 's|@comp_unload_opts@|$(comp_unload_opts)|g' \
 	-e 's|@comp_list_opts@|$(comp_list_opts)|g' \
+	-e 's|@comp_stashlist_opts@|$(comp_stashlist_opts)|g' \
 	-e 's|@comp_clear_opts@|$(comp_clear_opts)|g' \
 	-e 's|@comp_avail_opts@|$(comp_avail_opts)|g' \
 	-e 's|@comp_mfile_opts@|$(comp_mfile_opts)|g' \
