--- a/init/bash_completion.in
+++ b/init/bash_completion.in
@@ -67,6 +67,7 @@ _module() {
     edit)           _module_comgen_words_and_files "$(_module_avail "$cur")" "$cur";;
     aliases)  COMPREPLY=( $(compgen -W "@comp_aliases_opts@" -- "$cur") );;
     list|savelist)  COMPREPLY=( $(compgen -W "@comp_list_opts@" -- "$cur") );;
+    stashlist)  COMPREPLY=( $(compgen -W "@comp_stashlist_opts@" -- "$cur") );;
     clear)  COMPREPLY=( $(compgen -W "@comp_clear_opts@" -- "$cur") );;
     restore|save|saveshow|saverm|is-saved)
                     COMPREPLY=( $(compgen -W "$(_module_savelist)" -- "$cur") );;
@@ -126,6 +127,7 @@ if $(type -t ml >/dev/null); then
         edit)           _module_comgen_words_and_files "$(_module_avail "$cur")" "$cur";;
         aliases)  COMPREPLY=( $(compgen -W "@comp_aliases_opts@" -- "$cur") );;
         list|savelist)  COMPREPLY=( $(compgen -W "@comp_list_opts@" -- "$cur") );;
+        stashlist)  COMPREPLY=( $(compgen -W "@comp_stashlist_opts@" -- "$cur") );;
         clear)  COMPREPLY=( $(compgen -W "@comp_clear_opts@" -- "$cur") );;
         restore|save|saveshow|saverm|is-saved)
                         COMPREPLY=( $(compgen -W "$(_module_savelist)" -- "$cur") );;
