--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -85,6 +85,7 @@ complete module 'n/help/`_module_avail`/' \
         "n/reset/n/" \
         "n/stash/n/" \
         "n/stashclear/n/" \
+        "n/stashlist/(@comp_stashlist_opts@)/" \
         "n/stashpop/n/" \
         "n/stashrm/n/" \
         "n/stashshow/n/" \
