--- a/init/zsh-functions/_module.in
+++ b/init/zsh-functions/_module.in
@@ -159,6 +159,7 @@ _module() {
             'reset:Restore initial environment'
             'stash:Save current environment and reset'
             'stashclear:Remove all stash collections'
+            'stashlist:List all stash collections'
             'stashpop:Restore then remove stash collection'
             'stashrm:Remove stash collection'
             'stashshow:Display information about stash collection'
@@ -222,6 +223,12 @@ _module() {
                   '--output=:Define elements to output in addition to module names'
                )
                _describe -t opts 'Switches' opts && ret=0
+               ;;
+            (stashlist)
+               _arguments \
+                  '(-l --long)'{-l,--long}'[Display output in long format]' \
+                  '(-t --terse)'{-t,--terse}'[Display output in terse format]' \
+                  '(-j --json)'{-j,--json}'[Display output in JSON format]' && ret=0
                ;;
             (clear)
                _arguments \
