--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -381,7 +381,7 @@ proc cmdModuleSearch {{mod {}} {search {}}} {
             }
          }
 
-         displayElementList $dir mp sepline 1 0 $display_list
+         displayElementList $dir mp sepline 1 0 0 $display_list
       }
    }
    lpopState mode
@@ -830,8 +830,8 @@ proc cmdModuleSavelist {show_oneperline show_mtime search_match args} {
          }
       }
 
-      displayElementList noheader {} {} $one_per_line $show_idx $display_list\
-         $len_list $max_len
+      displayElementList noheader {} {} $one_per_line $show_idx $start_idx\
+         $display_list $len_list $max_len
    }
 }
 
@@ -1654,7 +1654,7 @@ proc cmdModuleAliases {} {
          lappend display_list "[sgr al $name] -> $::g_moduleAlias($name)"
       }
    }
-   displayElementList Aliases hi sepline 1 0 $display_list
+   displayElementList Aliases hi sepline 1 0 0 $display_list
 
    set display_list {}
    foreach name [lsort -dictionary [array names ::g_moduleVersion]] {
@@ -1664,7 +1664,7 @@ proc cmdModuleAliases {} {
          lappend display_list "[sgr sy $name] -> $::g_moduleVersion($name)"
       }
    }
-   displayElementList Versions hi sepline 1 0 $display_list
+   displayElementList Versions hi sepline 1 0 0 $display_list
 }
 
 proc cmdModuleAvail {show_oneperline show_mtime show_filter search_filter\
