--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2206,7 +2206,7 @@ proc cmdModuleState {args} {
    }
 
    # report module version unless if called by cmdModuleConfig
-   if {[lindex [info level -1] 0] ne {cmdModuleConfig}} {
+   if {[getCallingProcName] ne {cmdModuleConfig}} {
       reportVersion
       reportSeparateNextContent
    }
